[package]
name = "clythor"
authors = ["The Tari Development Community"]
description = "The Tari RandomX miner"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2018"

[features]
default = []

[dependencies]
minotari_app_utilities = { git = "https://github.com/tari-project/tari.git", rev = "825ca06", features = ["miner_input"] }
tari_common = { git = "https://github.com/tari-project/tari.git", rev = "825ca06" }
tari_core = { git = "https://github.com/tari-project/tari.git", rev = "825ca06" }
tari_utilities = "0.7.0"
tari_shutdown = { git = "https://github.com/tari-project/tari.git", rev = "825ca06" }

axum = "0.7.5"
clap = { version = "3.2", features = ["derive", "env"] }
config = "0.14.0"
crossterm = { version = "0.28.1" }
dialoguer = { version = "0.11.0" }
hex = "0.4.3"
log = { version = "0.4", features = ["std"] }
log4rs = { version = "1.3.0", default-features = false, features = ["config_parsing", "threshold_filter", "yaml_format", "console_appender", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
num_cpus = "1.16"
randomx-rs = { version = "1.3.0" }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1.36", default-features = false, features = ["rt-multi-thread"] }
